package org.example;

/**
 * The interface If3 extends interface If1,
 * consists of abstract method "meth3" and implemented method "meth1"
 * @author Maxim Kradozhon
 */

public interface If3 extends If1 {
    void meth3();
}
